--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,12 @@ title: Archtec Docs
 #email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Archtec Help pages
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/docs" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 github_username:  Archtec-io
-remote_theme: just-the-docs/just-the-docs
 # Build settings
+remote_theme: just-the-docs/just-the-docs
 plugins:
   - jekyll-feed
 
