--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 github_username:  Archtec-io
 # Build settings
-remote_theme: just-the-docs/just-the-docs
+remote_theme: just-the-docs/just-the-docs@v0.4.0.rc2
 plugins:
   - jekyll-feed
 
