--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,7 @@ search_enabled: true
 
 # Footer content
 # appears at the bottom of every page's main content
-# Note: The footer_content option is deprecated and will be removed in a future major release. Please use `_includes/footer_custom.html` for more robust
-markup / liquid-based content.
+# Note: The footer_content option is deprecated and will be removed in a future major release. Please use `_includes/footer_custom.html` for more robust markup / liquid-based content.
 footer_content: "Copyright &copy; 2022 The archtec community and Niklp."
 
 # Footer last edited timestamp
