--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ search_enabled: true
 # Footer content
 # appears at the bottom of every page's main content
 # Note: The footer_content option is deprecated and will be removed in a future major release. Please use `_includes/footer_custom.html` for more robust markup / liquid-based content.
-footer_content: "Copyright &copy; 2022 The archtec community and Niklp."
+footer_content: "Copyright &copy; 2022 The Archtec community and Niklp."
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
