--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,10 @@ title: Archtec Docs
 #email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Archtec Help pages
-baseurl: "/docs" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://archtec-io.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
-github_username:  Archtec-io
+github_username: Archtec-io
 # Build settings
 remote_theme: just-the-docs/just-the-docs@v0.4.0.rc2
 plugins:
@@ -40,7 +40,7 @@ last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https:/
 # Footer "Edit this page on GitHub" link text
 gh_edit_link: true # show or hide edit this page link
 gh_edit_link_text: "Edit this page on GitHub."
-gh_edit_repository: "https://github.com/Archtec-io/docs" # the github URL for your repo
+gh_edit_repository: "https://github.com/Archtec-io/Archtec-io" # the github URL for your repo
 gh_edit_branch: "main" # the branch that your docs is served from
 # gh_edit_source: docs # the source that your files originate from
 gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
