--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "/docs" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
-github_username:  Archtec-io
+github_username: Archtec-io
 
 # Build settings
 remote_theme: just-the-docs/just-the-docs@v0.4.0.rc3
@@ -30,7 +30,7 @@ search_enabled: true
 # Footer content
 # appears at the bottom of every page's main content
 # Note: The footer_content option is deprecated and will be removed in a future major release. Please use `_includes/footer_custom.html` for more robust markup / liquid-based content.
-footer_content: "Copyright &copy; 2022 The Archtec community and Niklp."
+footer_content: "Copyright &copy; 2022 The Archtec community."
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
